[JBEAP-26295] [installation-manager] The file URL passed as --repositories argument is not validated correctly